--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         }
     ],
     "require": {
-        "php": ">=7.3.0",
-        "behat/transliterator": "~1.0"
+        "php": ">=7.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3"
