--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "jeroendesloovere/vcard",
+    "name": "almanacdigitalltd/vcard",
     "type": "library",
     "description": "This VCard PHP class can generate a vCard with some data. When using an iOS device it will export as a .ics file because iOS devices don't support the default .vcf files.",
     "keywords": ["vcard", "generator", ".vcf", "php"],
-    "homepage": "https://github.com/jeroendesloovere/vcard",
+    "homepage": "https://github.com/almanacdigitalltd/vcard",
     "license": "MIT",
     "authors": [
         {
@@ -20,9 +20,9 @@
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
-        "psr-4": { "JeroenDesloovere\\VCard\\": "src/" }
+        "psr-4": { "AlmanacDigital\\VCard\\": "src/" }
     },
     "autoload-dev": {
-        "psr-4": { "JeroenDesloovere\\VCard\\": "tests/" }
+        "psr-4": { "AlmanacDigital\\VCard\\": "tests/" }
     }
 }
